objects/mkto_si__Integration_Log_Handler__mdt.object
<CustomObject>
    <fields>
        <fullName>mkto_si__Configuration__c</fullName>
        <inlineHelpText>JSON configuration to be used by the handler. Specify settings here</inlineHelpText>
        <label>Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Execute_Independently__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then the handler will be executed as part of its own transaction</description>
        <label>Execute Independently</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Handler_Class__c</fullName>
        <inlineHelpText>Name of the handler class that implements the interface IntegrationLogHandlerInterface</inlineHelpText>
        <label>Handler Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integration Log Handler</label>
    <listViews>
        <fullName>mkto_si__Configured_Handlers</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>mkto_si__Handler_Class__c</columns>
        <columns>mkto_si__Execute_Independently__c</columns>
        <columns>mkto_si__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>Configured Handlers</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Integration Log Handlers</pluralLabel>
</CustomObject>